--- a/src/css/style.css
+++ b/src/css/style.css
@@ -373,6 +373,8 @@ a {
   color: #000000;
   text-decoration: none;
   outline-style: none;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 a:hover {
