--- a/src/css/style.css
+++ b/src/css/style.css
@@ -415,6 +415,11 @@ a:hover {
 }
 
 .navbar {
+  -webkit-box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -424,7 +429,7 @@ a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 14px 0;
+  padding: 15px 0 10px;
 }
 
 .navbar__logo {
@@ -434,7 +439,7 @@ a:hover {
 .navbar__image {
   float: left;
   width: 146px;
-  margin-right: 14px;
+  margin-right: 15px;
 }
 
 .navbar__image img {
