--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -1,14 +1,16 @@
 .navbar
-  display: flex
-  justify-content: space-between
-  align-items: center
-  padding: 14px 0
+  box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1)
+  &-block
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 15px 0 10px
   &__logo
     width: 260px
   &__image
     float: left
     width: 146px
-    margin-right: 14px
+    margin-right: 15px
     img
       width: 100%
   &__text
