Поменял кнопки в навбаре

--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -1,4 +1,6 @@
 .navbar
+  position: fixed
+  width: 100%
   box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1)
   &-block
     display: flex
@@ -35,4 +37,3 @@
     padding: 12px
     font-size: 12px
     font-weight: 900
-  
