--- a/src/css/style.css
+++ b/src/css/style.css
@@ -415,6 +415,8 @@ a:hover {
 }
 
 .navbar {
+  position: fixed;
+  width: 100%;
   -webkit-box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1);
           box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1);
 }
