--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -31,6 +31,8 @@
     &__link
       font-size: 12px
       color: $link-c
+      &:hover
+        color: lighten($link-c, 10%)
   &__button
     width: 180px
     margin-left: 7px
