сверстал блок аренды

--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -1,6 +1,8 @@
 $btn-c: #f6cb0b
-$btn-hover: lighten(saturate($btn-c, 7.11), 13.92)
 $text-main: #000000
+$btn-br: lighten($text-main, 89.80)
+$btn-hover: lighten(saturate($btn-c, 7.11), 13.92)
+$text-add: lighten($text-main, 29.02)
 $text-grey: #8f8f8f
 $text-navbar: lighten($text-main, 29.02)
 $footer-c: #181818
