--- a/src/css/style.css
+++ b/src/css/style.css
@@ -386,8 +386,18 @@ a:hover {
   margin: auto;
 }
 
+.section__title {
+  font-size: 42px;
+}
+
+.section__subtitle {
+  color: #4a4a4a;
+}
+
 .button {
-  padding: 23px;
+  padding: 23px 0;
+  font-size: 14px;
+  font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 0.84px;
   background-color: #f6cb0b;
@@ -404,9 +414,10 @@ a:hover {
 }
 
 .button_light {
+  padding: 21px 0;
   letter-spacing: 0.72px;
   background: none;
-  border: 2px solid #e3eaf0;
+  border: 2px solid #e5e5e5;
 }
 
 .button_light:hover {
@@ -417,6 +428,15 @@ a:hover {
 @media (max-width: 1200px) {
   .container {
     width: 90%;
+  }
+}
+
+@media (max-width: 768px) {
+  .button {
+    padding: 18px 0;
+  }
+  .button_light {
+    padding: 16px;
   }
 }
 
@@ -431,6 +451,7 @@ a:hover {
 .navbar {
   position: fixed;
   width: 100%;
+  background-color: #ffffff;
   -webkit-box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1);
           box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1);
 }
@@ -566,8 +587,8 @@ a:hover {
     width: 240px;
     height: 100vh;
     background-color: #fff;
-    -webkit-transform: translateX(-240px);
-            transform: translateX(-240px);
+    -webkit-transform: translateX(-260px);
+            transform: translateX(-260px);
     -webkit-transition: 0.5s;
     transition: 0.5s;
     -webkit-box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1);
@@ -593,6 +614,7 @@ a:hover {
   }
   .navbar__image {
     float: none;
+    margin-bottom: -3px;
   }
   .navbar__phone {
     display: none;
@@ -602,5 +624,188 @@ a:hover {
     -webkit-box-ordinal-group: -1;
         -ms-flex-order: -2;
             order: -2;
+  }
+}
+
+.header {
+  background: url("../img/hero/hero-bg.png"), #e3eaf0;
+  background-repeat: no-repeat;
+  background-position: 45.5vw 60%;
+}
+
+.hero {
+  padding: 180px 0 200px;
+}
+
+.hero__text {
+  margin-bottom: 45px;
+  max-width: 700px;
+}
+
+.hero__title {
+  margin: 0;
+  margin-bottom: 26px;
+  font-size: 60px;
+  letter-spacing: 0.7px;
+}
+
+.hero__title br:last-child {
+  display: none;
+}
+
+.hero__button {
+  width: 240px;
+}
+
+@media (max-width: 991px) {
+  .header {
+    background-size: 80%;
+    background-position: 33.5vw 60%;
+  }
+  .hero {
+    padding: 160px 0;
+  }
+  .hero__text {
+    max-width: 450px;
+    margin-bottom: 39px;
+  }
+  .hero__title {
+    margin-bottom: 22px;
+    font-size: 32px;
+    line-height: 40px;
+  }
+  .hero__subtitle {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    background-size: 508px;
+    background-position: 30vw 85%;
+  }
+  .hero {
+    padding: 130px 0 200px;
+  }
+}
+
+@media (max-width: 576px) {
+  .header {
+    background-position: 50% 102%;
+  }
+  .hero {
+    padding: 130px 0 336px;
+  }
+  .hero__text {
+    max-width: 290px;
+  }
+  .hero__title br:last-child {
+    display: block;
+  }
+}
+
+.rent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 1180px;
+  height: 310px;
+  margin-top: -81px;
+  -webkit-box-shadow: 0 10px 67px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 10px 67px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  background-color: #ffffff;
+}
+
+.rent__image {
+  max-width: 652px;
+}
+
+.rent__image img {
+  position: relative;
+  top: 7px;
+  left: -5px;
+  width: 100%;
+}
+
+.rent__text {
+  max-width: 290px;
+  margin-top: -7px;
+  margin-left: 48px;
+}
+
+.rent__title {
+  margin: 0 0 29px;
+  font-size: 24px;
+  line-height: 34px;
+  letter-spacing: 0.2px;
+}
+
+.rent__button {
+  width: 240px;
+}
+
+@media (max-width: 1200px) {
+  .rent {
+    height: 280px;
+  }
+  .rent__image {
+    max-width: 550px;
+  }
+  .rent__text {
+    margin-left: 24px;
+  }
+}
+
+@media (max-width: 991px) {
+  .rent {
+    height: 250px;
+  }
+  .rent__image {
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 768px) {
+  .rent {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 395px;
+    margin-top: -46px;
+  }
+  .rent__text {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .rent__image {
+    max-width: 290px;
+  }
+  .rent__image img {
+    top: 20px;
+    left: -13px;
+    width: 100%;
+    height: 163px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .rent__text {
+    margin-top: 5px;
+  }
+  .rent__title {
+    max-width: 215px;
+    margin-bottom: 21px;
+  }
+  .rent__button {
+    max-width: 230px;
   }
 }
