--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -1,6 +1,7 @@
 .navbar
   position: fixed
   width: 100%
+  background-color: #ffffff
   box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1)
   &-block
     display: flex
@@ -83,7 +84,7 @@
       width: 240px
       height: 100vh
       background-color: #fff
-      transform: translateX(-240px)
+      transform: translateX(-260px)
       transition: 0.5s
       box-shadow: 0 2px 23px 1px rgba(0, 0, 0, 0.1)
     &__button
@@ -101,6 +102,7 @@
         display: none
     &__image
       float: none
+      margin-bottom: -3px
     &__phone
       display: none
     &-buttons
