Верстка блока условий

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -21,7 +21,10 @@ a
   &__title
     font-size: 42px
   &__subtitle
-    color: $text-add
+    font-size: 14px
+    letter-spacing: 0.84px
+    text-transform: uppercase
+    color: $text-grey
 
 .button
   padding: 23px 0
