--- a/src/css/style.css
+++ b/src/css/style.css
@@ -391,7 +391,10 @@ a:hover {
 }
 
 .section__subtitle {
-  color: #4a4a4a;
+  font-size: 14px;
+  letter-spacing: 0.84px;
+  text-transform: uppercase;
+  color: #8f8f8f;
 }
 
 .button {
@@ -722,19 +725,17 @@ a:hover {
 
 .rent__image {
   max-width: 652px;
+  margin-left: 50px;
 }
 
 .rent__image img {
-  position: relative;
-  top: 7px;
-  left: -5px;
   width: 100%;
 }
 
 .rent__text {
   max-width: 290px;
-  margin-top: -7px;
-  margin-left: 48px;
+  margin-top: -9px;
+  margin-left: 54px;
 }
 
 .rent__title {
@@ -789,17 +790,17 @@ a:hover {
 @media (max-width: 576px) {
   .rent__image {
     max-width: 290px;
+    margin: 0;
+    margin-top: 19px;
   }
   .rent__image img {
-    top: 20px;
-    left: -13px;
     width: 100%;
-    height: 163px;
-    -o-object-fit: cover;
-       object-fit: cover;
+    height: 164px;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   .rent__text {
-    margin-top: 5px;
+    margin-top: -15px;
   }
   .rent__title {
     max-width: 215px;
@@ -807,5 +808,74 @@ a:hover {
   }
   .rent__button {
     max-width: 230px;
+  }
+}
+
+.features {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 100px 0;
+}
+
+.features__text {
+  width: 300px;
+}
+
+.features__title {
+  margin: 0;
+  margin-top: 28px;
+}
+
+.features__subtitle {
+  display: block;
+  margin-top: 12px;
+}
+
+.features__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  width: 831px;
+}
+
+.features__item {
+  max-width: 230px;
+}
+
+.features-item__image {
+  max-width: 68px;
+}
+
+.features-item__title {
+  margin: 28px 0 16px;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.features-item__text {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26px;
+  color: #4a4a4a;
+}
+
+@media (max-width: 1200px) {
+  .features {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .features__text {
+    width: auto;
+    margin-bottom: 28px;
   }
 }
