--- a/src/sass/blocks/_rent.sass
+++ b/src/sass/blocks/_rent.sass
@@ -9,15 +9,13 @@
   background-color: #ffffff
   &__image
     max-width: 652px
+    margin-left: 50px
     img
-      position: relative
-      top: 7px
-      left: -5px
       width: 100%
   &__text
     max-width: 290px
-    margin-top: -7px
-    margin-left: 48px
+    margin-top: -9px
+    margin-left: 54px
   &__title
     margin: 0 0 29px
     font-size: 24px
@@ -53,14 +51,14 @@
   .rent
     &__image
       max-width: 290px
+      margin: 0
+      margin-top: 19px
       img
-        top: 20px
-        left: -13px
         width: 100%
-        height: 163px
-        object-fit: cover
+        height: 164px
+        object-fit: contain
     &__text
-      margin-top: 5px
+      margin-top: -15px
     &__title
       max-width: 215px
       margin-bottom: 21px
