--- a/src/fonts/stylesheet.css
+++ b/src/fonts/stylesheet.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Yandex Sans Text';
-    src: url('YandexSansText-Medium.eot');
-    src: url('YandexSansText-Medium.eot?#iefix') format('embedded-opentype'),
-        url('YandexSansText-Medium.woff2') format('woff2'),
-        url('YandexSansText-Medium.woff') format('woff');
-    font-weight: 500;
+    src: url('YandexSansText-Thin.eot');
+    src: url('YandexSansText-Thin.eot?#iefix') format('embedded-opentype'),
+        url('YandexSansText-Thin.woff2') format('woff2'),
+        url('YandexSansText-Thin.woff') format('woff');
+    font-weight: 100;
     font-style: normal;
 }
 
