--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -97,6 +97,11 @@ input[type="radio"]:not(:checked) + label
   .container
     width: 90%
 
+@media (max-width: 991px)
+  .section
+    &__title
+      font-size: 24px
+
 @media (max-width: 768px)
   .button
     padding: 18px 0
