--- a/src/sass/blocks/_steps.sass
+++ b/src/sass/blocks/_steps.sass
@@ -1,5 +1,4 @@
 .steps
-  display: none
   padding: 105px 0
   &__subtitle
     display: block
@@ -14,15 +13,19 @@
     display: flex
     justify-content: space-between
     align-items: flex-start
+    &:nth-child(even)
+      .steps__text
+        order: 1
+        flex-grow: 1
+        margin-left: 200px
+    &:nth-child(odd)
+      .steps__text
+        margin-left: 100px
   &__text
     width: 350px
     margin-top: 112px
     font-size: 24px
     line-height: 34px
-    &:nth-child(even)
-      justify-self: self-start
-    &:nth-child(odd)
-      margin-left: 100px
   &__number
     display: block
     margin-bottom: 42px
