--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,3 +8,6 @@
 @import "blocks/features"
 @import "blocks/test"
 @import "blocks/steps"
+@import "blocks/questions"
+@import "blocks/request"
+@import "blocks/footer"
