--- a/src/css/style.css
+++ b/src/css/style.css
@@ -401,54 +401,6 @@ input[type="radio"] {
   display: none;
 }
 
-input[type="radio"]:checked + label,
-input[type="radio"]:not(:checked) + label {
-  position: relative;
-  padding-left: 50px;
-  cursor: pointer;
-  line-height: 20px;
-  display: inline-block;
-}
-
-[type="radio"]:checked + label:before,
-[type="radio"]:not(:checked) + label:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: -9px;
-  width: 34px;
-  height: 34px;
-  border: 2px solid #e7e7e7;
-  border-radius: 100%;
-  background: #fff;
-}
-
-[type="radio"]:checked + label:after,
-[type="radio"]:not(:checked) + label:after {
-  content: '';
-  width: 12px;
-  height: 12px;
-  background: #047acb;
-  position: absolute;
-  top: 4px;
-  left: 13px;
-  border-radius: 100%;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-
-[type="radio"]:not(:checked) + label:after {
-  opacity: 0;
-  -webkit-transform: scale(0);
-          transform: scale(0);
-}
-
-[type="radio"]:checked + label:after {
-  opacity: 1;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-}
-
 .button {
   padding: 23px 0;
   font-size: 14px;
@@ -778,7 +730,7 @@ input[type="radio"]:not(:checked) + label {
   }
 }
 
-.rent {
+.rent-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -821,7 +773,7 @@ input[type="radio"]:not(:checked) + label {
 }
 
 @media (max-width: 1200px) {
-  .rent {
+  .rent-block {
     height: 280px;
   }
   .rent__image {
@@ -833,7 +785,7 @@ input[type="radio"]:not(:checked) + label {
 }
 
 @media (max-width: 991px) {
-  .rent {
+  .rent-block {
     height: 250px;
   }
   .rent__image {
@@ -842,7 +794,7 @@ input[type="radio"]:not(:checked) + label {
 }
 
 @media (max-width: 768px) {
-  .rent {
+  .rent-block {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -882,7 +834,7 @@ input[type="radio"]:not(:checked) + label {
   }
 }
 
-.features {
+.features-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -961,7 +913,7 @@ input[type="radio"]:not(:checked) + label {
 }
 
 @media (max-width: 768px) {
-  .features {
+  .features-block {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1118,6 +1070,54 @@ input[type="radio"]:not(:checked) + label {
   width: 160px;
   height: 50px;
   padding: 0;
+}
+
+.card__input:checked + label,
+.card__input:not(:checked) + label {
+  position: relative;
+  padding-left: 50px;
+  cursor: pointer;
+  line-height: 20px;
+  display: inline-block;
+}
+
+.card__input:checked + label:before,
+.card__input:not(:checked) + label:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: -9px;
+  width: 34px;
+  height: 34px;
+  border: 2px solid #e7e7e7;
+  border-radius: 100%;
+  background: #fff;
+}
+
+.card__input:checked + label:after,
+.card__input:not(:checked) + label:after {
+  content: '';
+  width: 12px;
+  height: 12px;
+  background: #047acb;
+  position: absolute;
+  top: 4px;
+  left: 13px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.card__input:not(:checked) + label:after {
+  opacity: 0;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
+.card__input:checked + label:after {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 @media (max-width: 991px) {
@@ -1310,4 +1310,265 @@ input[type="radio"]:not(:checked) + label {
 
 .steps__image {
   display: none;
+}
+
+.faq {
+  padding: 100px 0;
+  background: url("../img/questions/question.png");
+  background-repeat: no-repeat;
+  background-position: calc(50vw - 600px) 100px;
+}
+
+.faq__text {
+  width: 780px;
+  margin: auto;
+  text-align: center;
+}
+
+.faq__subtitle {
+  display: block;
+}
+
+.faq__title {
+  position: relative;
+  margin-bottom: 80px;
+}
+
+.faq__title::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -50px;
+  width: 100%;
+  height: 1px;
+  background-color: #ebebeb;
+}
+
+.faq__list {
+  max-width: 780px;
+  margin: auto;
+}
+
+.faq__question {
+  display: block;
+  margin-bottom: 30px;
+}
+
+.faq__answer {
+  max-width: 730px;
+  margin-bottom: 55px;
+  color: #8f8f8f;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.faq__line {
+  width: 100%;
+  height: 1px;
+  margin-bottom: 30px;
+  background-color: #ebebeb;
+}
+
+.faq__toggle {
+  display: none;
+}
+
+.faq__toggle + label {
+  cursor: pointer;
+}
+
+.faq__toggle + label + div {
+  display: none;
+}
+
+.faq__toggle:checked + label + div {
+  display: block;
+}
+
+.request {
+  margin-bottom: 111px;
+}
+
+.request__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-shadow: 0 10px 67px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 10px 67px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+}
+
+.request-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 580px;
+  margin: auto;
+}
+
+.request__description {
+  color: #4a4a4a;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.request__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.request__form input[type="checkbox"] {
+  display: none;
+}
+
+.request__input {
+  width: 580px;
+  height: 50px;
+  margin-bottom: 20px;
+  padding-left: 19px;
+  border-radius: 6px;
+  border: 1px solid #e4e4e4;
+}
+
+.request__input::-webkit-input-placeholder {
+  color: #a9a9a9;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.request__input:-ms-input-placeholder {
+  color: #a9a9a9;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.request__input::-ms-input-placeholder {
+  color: #a9a9a9;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.request__input::placeholder {
+  color: #a9a9a9;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.request__button {
+  padding: 17px 0;
+  margin-bottom: 22px;
+}
+
+.request__accept {
+  position: relative;
+  margin-bottom: 40px;
+  padding-left: 45px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.request__accept a {
+  display: inline-block;
+  color: #047acb;
+}
+
+.request__accept::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 6px;
+  border: 1px solid #e4e4e4;
+  cursor: pointer;
+}
+
+.request__phone {
+  font-size: 16px;
+}
+
+.request__phone a {
+  display: inline-block;
+}
+
+.request__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.request__link {
+  -ms-flex-preferred-size: 180px;
+      flex-basis: 180px;
+  color: #4a4a4a;
+  text-align: center;
+}
+
+.request__image {
+  padding: 80px 55px;
+  background-color: #e3eaf0;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.footer {
+  padding: 32px 0;
+  background-color: #181818;
+}
+
+.footer-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__title {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  color: #8f8f8f;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.footer__phone {
+  display: block;
+  margin-right: 20px;
+  color: #ffffff;
+  font-size: 16px;
+}
+
+.footer__button {
+  width: 200px;
+  color: #8f8f8f;
+  border-color: #363636;
+}
+
+.footer__button:first-child {
+  margin-right: 50px;
+}
+
+.footer__button:last-child {
+  margin-left: 15px;
 }
