--- a/src/sass/blocks/_rent.sass
+++ b/src/sass/blocks/_rent.sass
@@ -1,12 +1,13 @@
 .rent
-  display: flex
-  align-items: center
-  max-width: 1180px
-  height: 310px
-  margin-top: -81px
-  box-shadow: 0 10px 67px 4px rgba(0, 0, 0, 0.1)
-  border-radius: 6px
-  background-color: #ffffff
+  &-block
+    display: flex
+    align-items: center
+    max-width: 1180px
+    height: 310px
+    margin-top: -81px
+    box-shadow: 0 10px 67px 4px rgba(0, 0, 0, 0.1)
+    border-radius: 6px
+    background-color: #ffffff
   &__image
     max-width: 652px
     margin-left: 50px
@@ -26,7 +27,8 @@
 
 @media (max-width: 1200px)
   .rent
-    height: 280px
+    &-block
+      height: 280px
     &__image
       max-width: 550px
     &__text
@@ -34,16 +36,18 @@
 
 @media (max-width: 991px)
   .rent
-    height: 250px
+    &-block
+      height: 250px
     &__image
       max-width: 350px
 
 @media (max-width: 768px)
   .rent
-    flex-direction: column
-    align-items: center
-    height: 395px
-    margin-top: -46px
+    &-block
+      flex-direction: column
+      align-items: center
+      height: 395px
+      margin-top: -46px
     &__image
       max-width: 290px
       margin: 0
@@ -57,7 +61,6 @@
 
 @media (max-width: 576px)
   .rent
-    
     &__text
       margin-top: -15px
     &__title
