--- a/src/sass/blocks/_test.sass
+++ b/src/sass/blocks/_test.sass
@@ -78,6 +78,47 @@
     height: 50px
     padding: 0
 
+
+.card__input:checked + label,
+.card__input:not(:checked) + label
+  position: relative
+  padding-left: 50px
+  cursor: pointer
+  line-height: 20px
+  display: inline-block
+
+.card__input:checked + label:before,
+.card__input:not(:checked) + label:before
+  content: ''
+  position: absolute
+  left: 0
+  top: -9px
+  width: 34px
+  height: 34px
+  border: 2px solid #e7e7e7
+  border-radius: 100%
+  background: #fff
+
+.card__input:checked + label:after,
+.card__input:not(:checked) + label:after
+  content: ''
+  width: 12px
+  height: 12px
+  background: $link-c
+  position: absolute
+  top: 4px
+  left: 13px
+  border-radius: 100%
+  transition: all 0.2s ease
+
+.card__input:not(:checked) + label:after
+  opacity: 0
+  transform: scale(0)
+
+.card__input:checked + label:after 
+  opacity: 1
+  transform: scale(1)
+
 @media (max-width: 991px)
   .test
     &__title
